test/compile_errors/tokenization_error_beginning.ivy
#lang ivy1.7
λlambda